--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     background-color: #f5f6f7;
 }
 .bi-bicycle {
-    font-size: xx-large;
+    font-size: 50px;
 }
 
 @media screen and (max-width: 600px){
@@ -29,19 +29,90 @@ section{
 }                                
 h1{
     font-size: 2.5rem;
+    font-family: 'Gloock', serif;
+} 
+.tittle-section{
+    font-size: 2.5rem;
+    padding: 15px 0;
+    font-family: 'Gloock', cursive;
+}
+.text-section{
+    font-size: 1.2rem ;
 }
 
                                    /* hero section */
-                                   
+
+.hero-image{
+    border-radius: 50%;
+    border: double;
+    margin: 20px;
+    filter: contrast(200);
+    filter: sepia(80%);
+}                                                        
 .hero{
     background-color: #f5f6f7;
     min-height: 450px;
     text-align: center;
 }
+.hero-principal{
+    padding: 3rem;
+}
+.hero-principal h2 {
+    font-size: 1.5rem;
+    color: #615151;
+}           
+@media screen and (min-width: 700px){
+    .hero-img-inferior{
+        max-width: 600px;
+    }
+}
 
-img{
+                                   /* about me section */
+
+.about-me{
+    height: 300px;
+    padding: 10px;
+}
+.about-me .container{
+    max-width: 600px;
+    text-align: center;
+}
+.dark-section{
+    background-color: #1b1b32;
+    color: white;
+}                                   /* experience section */
+.experience{
+    padding: 40px 40px 60px 40px;
+}
+.experience-tittle{
+    font-size: 25px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+.experience i {
+    font-size: 2.5rem;
+    color: lightcoral;
+    background-color: black;
+    padding: 10px 19px;
     border-radius: 50%;
-    border: double;
-    filter: contrast(200);
-    filter: sepia(80%);
-}                                
+}
+.badges-container{
+    font-size: 22px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+.badge{
+    margin: 5px;
+}
+.experience .columna{
+    padding: 20px;   
+    border: 2px solid #8080804d;
+    flex-direction: column;
+    display: flex;
+    justify-content: space-evenly;
+    transition: all 0.2s ease-in;
+}
+.experience .columna:hover{
+    color: white;
+    background-color: #1b1b32;
+}
