--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ section{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
 }                                
 h1{
     font-size: 2.5rem;
@@ -39,7 +38,14 @@ h1{
 .text-section{
     font-size: 1.2rem ;
 }
-
+.dark-section{
+    background-color: #1b1b32;
+    color: white;
+} 
+.light-section{
+    background-color:white;
+    color: #1b1b32 ;
+} 
                                    /* hero section */
 
 .hero-image{
@@ -51,7 +57,7 @@ h1{
 }                                                        
 .hero{
     background-color: #f5f6f7;
-    min-height: 450px;
+    min-height: 400px;
     text-align: center;
 }
 .hero-principal{
@@ -70,17 +76,14 @@ h1{
                                    /* about me section */
 
 .about-me{
-    height: 300px;
+    height: 500px;
     padding: 10px;
 }
 .about-me .container{
     max-width: 600px;
     text-align: center;
 }
-.dark-section{
-    background-color: #1b1b32;
-    color: white;
-}                                   /* experience section */
+                                  /* experience section */
 .experience{
     padding: 40px 40px 60px 40px;
 }
@@ -115,4 +118,51 @@ h1{
 .experience .columna:hover{
     color: white;
     background-color: #1b1b32;
+}
+                                  /* projects section */
+.recently-projects{
+    padding: 40px;
+}                 
+.description-section{
+    font-size: 1.2rem;
+    color: #584e4e;
+}                 
+.black-text{
+    color: black;
+}
+.white-text{
+    color:white;
+}
+.proj-icons{
+    font-size: 150px;
+    padding: 10px;
+    display: block ;
+    transition: all 0.2s ease;
+}
+.projects-container{
+    padding-top: 60px;
+    margin-bottom: 40px;
+}
+.overlay {
+    transition: all 0.2s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+.overlay p{
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 0;
+}
+.project {
+    position: relative;
+}
+.project:hover .proj-icons{
+    opacity: 0.2;
+}
+.project:hover .overlay{
+    opacity: 1;
 }
