--- a/style.css
+++ b/style.css
@@ -166,3 +166,12 @@ h1{
 .project:hover .overlay{
     opacity: 1;
 }
+.overlay .iconos-container{
+    display: flex;
+}
+.overlay i {
+    color: black ;
+    font-size: 40px;
+    margin: 10px;
+    
+}
