--- a/style.css
+++ b/style.css
@@ -211,7 +211,6 @@ h1{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: greenyellow;
 }
 .studying-imagen {
     height: 150px;
@@ -246,12 +245,12 @@ h1{
 .link-studyg{
     width: 100px;
 }
-@media screen and (min-width: 700px){
+@media screen and (max-width: 700px){
     .studying-imagen{
         height: 100px;
         width: 100px;
     }
     .studying-text{
-        font-size: 18px;
+        font-size: 10px;
     }
 }
