--- a/images/Bootstrap page exercise_files/style.css
+++ b/images/Bootstrap page exercise_files/style.css
@@ -301,11 +301,12 @@ h1{
 }
 /*footer*/
 footer{
-    min-height: 350px;
+    min-height: 500px;
 }
 .footer-icon{
-    font-size: 2rem;
-    margin-bottom: 40px;
+    height: 100px;
+    width: 100px;
+    margin: 10px;
 }
 .footer-text{
     font-size: 1.5rem;
@@ -324,16 +325,4 @@ footer{
     border: 2px solid white;
     border-radius: 50%;
     transition: all 0.2s ease-in;
-}
-.redes-icon i{
-    color: white;
-    font-size: 1.5rem;
-    transition: all 0.2s ease-in;
-}
-.redes-icon a:hover{
-    background-color: white;
-    border: 2px solid rgb(13, 110, 253);
-}
-.redes-icon a:hover i{
-    color: black;
 }
